archive/manifests/longhorn/longhorn-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.example.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
